# geomView

./: CMakeLists.txt  Makefile  OGLitem.cpp  OGLitem.h  README.md  codegen.cpp  codegenbin.cpp  custom_controls.cpp  custom_controls.h  draw.cpp  draw.h  fb2way.cpp  fb2way.h  filesystem_internal.h  gendeps.sh  geo.cpp  geo.h  geom_view.h  glass_buttons.cpp  glass_buttons.h  grpng_reader.h  imgui.ini  imgui_controls.cpp  imgui_controls.h  interface.cpp  interface.h  light_all_fix.txt  light_all_nofix.txt  light_oct_fix.txt  light_oct_nofix.txt  main.cpp  mainlib.cpp  object.cpp  object.h  oct.txt  sample.txt  saveSTL.cpp  saveSTL.h  sha.fs  sha.gs  (+18 more)
.github/workflows/: win32_build.bat  win_build.yml
testlib/: build_dyn  build_static  s1.txt  s2.txt  s3.txt  sl1.txt  sl2.txt  sl3.txt  test.cpp  test_controls.cpp  test_files.cpp  test_offscreen.cpp
